Fix visible black borders at the top and bottom of the videos for mobile screens in the videos section

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -114,7 +114,7 @@ h4 {
 .embla.videos {
   max-width: 100%;
   margin: auto;
-  --slide-height: 8rem;
+  --slide-height: 7.8rem;
   --slide-spacing: 1rem;
   --slide-size: 15rem;
   --slide-spacing-sm: 1.6rem;
